<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1)"
        app:layout_constraintBottom_toBottomOf="@+id/ingredient_name"
        app:layout_constraintEnd_toStartOf="@+id/amount"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/of"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toEndOf="@id/index"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/of"
        app:layout_constraintBottom_toBottomOf="@id/ingredient_name"
        app:layout_constraintEnd_toStartOf="@id/ingredient_name"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/amount"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ingredient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="11"
        android:hint="@string/Ingredients"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/delete_ingredient"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toEndOf="@id/of"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_ingredient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>